@@ -65,6 +65,8 @@ Each plugin takes a seed. Here's what those seeds are:
 [Optional] ",subseed" optional seed to pass to dlopen'd generator.
 .IP gui_fltk
 [Irrelevant] Ignores the passed seed
+.IP Error
+[Irrelevant] Ignores the passed seed
 
 .SH MULTIPLE ECUS
 .IX Header "MULTIPLE ECUS"
