@@ -9,6 +9,8 @@
 #cmakedefine OBD_CONFIG_FILENAME "@OBD_CONFIG_FILENAME@"
 #cmakedefine OBD_DEFAULT_COLUMNS "@OBD_DEFAULT_COLUMNS@"
 #cmakedefine OBD_FTDIPTY_DEVICE "@OBD_FTDIPTY_DEVICE@"
+#cmakedefine OBDSIM_ELM_VERSION_STRING "@OBDSIM_ELM_VERSION_STRING@"
+#cmakedefine OBDSIM_ELM_DEVICE_STRING "@OBDSIM_ELM_DEVICE_STRING@"
 
 #endif // OBDCONFIG_H
 
